# livraria

./: .gitignore  db.sqlite3  pyproject.toml
config/: settings.py  urls.py  wsgi.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_remove_livro_autores_remove_livro_categoria_and_more.py  0003_autor_livro.py  0004_rename_tirulo_livro_titulo.py  0005_rename_autores_livro_autor.py  0006_rename_autor_livro_autores.py  0007_remove_livro_categoria_livro_categoria.py
livraria/models/: autor.py  livro.py  livros.py
livraria/serializers/: autor.py  livro.py
livraria/views/: autor.py  categoria.py  editora,py  livro.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
